--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -12,8 +12,7 @@ resources:
 - bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
-- bases/infrastructure.cluster.x-k8s.io_metal3metadatas.yaml
-- bases/infrastructure.cluster.x-k8s.io_metal3metadatastatuses.yaml
+- bases/infrastructure.cluster.x-k8s.io_metal3datatemplates.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -22,8 +21,7 @@ patchesStrategicMerge:
 - patches/webhook_in_metal3machines.yaml
 - patches/webhook_in_metal3clusters.yaml
 - patches/webhook_in_metal3machinetemplates.yaml
-- patches/webhook_in_metal3metadatas.yaml
-- patches/webhook_in_metal3metadatastatuses.yaml
+- patches/webhook_in_metal3datatemplates.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -31,8 +29,7 @@ patchesStrategicMerge:
 - patches/cainjection_in_metal3machines.yaml
 - patches/cainjection_in_metal3clusters.yaml
 - patches/cainjection_in_metal3machinetemplates.yaml
-- patches/cainjection_in_metal3metadatas.yaml
-- patches/cainjection_in_metal3metadatastatuses.yaml
+- patches/cainjection_in_metal3datatemplates.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
