--- a/config/crd/patches/cainjection_in_metal3datatemplates.yaml
+++ b/config/crd/patches/cainjection_in_metal3datatemplates.yaml
@@ -5,4 +5,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: metal3metadatas.infrastructure.cluster.x-k8s.io
+  name: metal3datatemplates.infrastructure.cluster.x-k8s.io
