--- a/examples/provider-components/kustomization.yaml
+++ b/examples/provider-components/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
 - bootstrap-components.yaml
 - ctlplane-components.yaml
 - infrastructure-components.yaml
+- bare-metal-operator-components.yaml
 patchesStrategicMerge:
 - manager_tolerations_patch.yaml
