--- a/config/kustomization.yaml
+++ b/config/kustomization.yaml
@@ -3,10 +3,11 @@ namePrefix: capm3-
 commonLabels:
   cluster.x-k8s.io/provider: "infrastructure-metal3"
 
-bases:
+resources:
 - crd
 - webhook # Disable this if you're not using the webhook functionality.
 - default
+- bmo
 
 patchesJson6902:
 - target: # NOTE: This patch needs to be repeatd for EACH CustomResourceDefinition you have under crd/bases.
