--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
 - bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3datatemplates.yaml
+- bases/infrastructure.cluster.x-k8s.io_metal3datas.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -22,6 +23,7 @@ patchesStrategicMerge:
 - patches/webhook_in_metal3clusters.yaml
 - patches/webhook_in_metal3machinetemplates.yaml
 - patches/webhook_in_metal3datatemplates.yaml
+- patches/webhook_in_metal3datas.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -30,6 +32,7 @@ patchesStrategicMerge:
 - patches/cainjection_in_metal3clusters.yaml
 - patches/cainjection_in_metal3machinetemplates.yaml
 - patches/cainjection_in_metal3datatemplates.yaml
+- patches/cainjection_in_metal3datas.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
