--- a/config/kustomization.yaml
+++ b/config/kustomization.yaml
@@ -33,3 +33,9 @@ patchesJson6902:
     kind: CustomResourceDefinition
     name: metal3datatemplates.infrastructure.cluster.x-k8s.io
   path: patch_crd_webhook_namespace.yaml
+- target:
+    group: apiextensions.k8s.io
+    version: v1
+    kind: CustomResourceDefinition
+    name: metal3datas.infrastructure.cluster.x-k8s.io
+  path: patch_crd_webhook_namespace.yaml
