--- a/examples/controlplane/controlplane.yaml
+++ b/examples/controlplane/controlplane.yaml
@@ -47,50 +47,74 @@ kind: Metal3DataTemplate
 metadata:
   name: ${CLUSTER_NAME}-cp-metadata
 spec:
-  metaData: |
-    ghi: jkl
-    index: '{{ index }}'
-    index_offset: "{{ indexWithOffset 1 }}"
-    index_step: "{{ indexWithStep 2 }}"
-    index_offset_step: "{{ indexWithOffsetAndStep 1 2 }}"
-    index_step_offset: "{{ indexWithStepAndOffset 2 1 }}"
-    index_hex: '{{ indexHex }}'
-    index_hex_offset: "{{ indexWithOffsetHex 11 }}"
-    index_hex_step: "{{ indexWithStepHex 2 }}"
-    index_hex_offset_step: "{{ indexWithOffsetAndStepHex 11 2 }}"
-    index_hex_step_offset: "{{ indexWithStepAndOffsetHex 2 11 }}"
-    machine_name: "{{ machineName }}"
-    m3machine_name: "{{ metal3MachineName }}"
-  networkData: |
-    {
-        "links": [
-            {
-                "id": "enp1s0",
-                "type": "phy",
-                "ethernet_mac_address": "{{ '{{ bareMetalHostMACByName "eth0" }}' }}"
-            },
-            {
-                "id": "enp2s0",
-                "type": "phy",
-                "ethernet_mac_address": "{{ '{{ bareMetalHostMACByName "eth1" }}' }}"
-            }
-        ],
-        "networks": [
-            {
-                "id": "Provisioning",
-                "type": "ipv4_dhcp",
-                "link": "enp1s0"
-            },
-            {
-                "id": "Baremetal",
-                "type": "ipv4_dhcp",
-                "link": "enp2s0"
-            }
-        ],
-        "services": [
-            {
-                "type": "dns",
-                "address": "8.8.8.8"
-            }
-        ]
-    }
+  metaData:
+    - key: index_0_1
+      index:
+        offset: 0
+        step: 1
+    - key: index_3
+      index:
+        offset: 3
+    - key: index_5_2
+      index:
+        offset: 5
+        step: 2
+    - key: machine_name
+      objectName: machine
+    - key: metal3machine_name
+      objectName: metal3machine
+    - key: bmh_name
+      objectName: baremetalhost
+    - key: ip_1
+      ipAddress:
+        start: 192.168.0.10
+        end: 192.168.0.100
+        step: 2
+    - key: ip_2
+      ipAddress:
+        subnet: 192.168.1.0/24
+        step: 1
+    - key: ip6_1
+      ipAddress:
+        start: 2001::af:a
+        end: 2001::af:fff0
+        step: 2
+    - key: ip6_2
+      ipAddress:
+        subnet: 2001:AB::0/64
+        step: 1
+    - key: mac
+      fromHostInterface: eth0
+  networkData:
+    links:
+      - ethernet:
+          type: phy
+          id: enp1s0
+          macAddress:
+            fromHostInterface: eth0
+      - ethernet:
+          type: phy
+          id: enp2s0
+          macAddress:
+            fromHostInterface: eth1
+    networks:
+      - ipv4DHCP:
+          id: provisioning
+          link: enp1s0
+      - ipv4:
+          id: baremetal
+          link: enp2s0
+          ipAddress:
+            start: 192.168.111.100
+            end: 192.168.111.200
+            subnet: 192.168.111.0/24
+            step: 2
+          netmask: 24
+          routes:
+            - network: 0.0.0.0
+              netmask: 0
+              gateway: 192.168.111.1
+              services:
+                - dns: 8.8.8.8
+    services:
+      - dns: 8.8.8.8
